--- a/src/containers/header/Header.scss
+++ b/src/containers/header/Header.scss
@@ -34,7 +34,7 @@
     input{
         flex: 2;
         width: 100%;
-        min-height: 50px;
+        min-height: 80px;
         font-family: var(--font-family);
         font-weight: 400;
         font-size: 20px;
@@ -95,5 +95,56 @@
     img{
         width: 100%;
         height: 100%;
+    }
+}
+
+@media screen and(max-width: 1050px){
+    .gpt3__header{
+        padding: 2rem 1rem;
+        h1{
+            font-size: 45px;
+            line-height: 50px;
+        }
+        p{
+            font-size: 15px;
+            padding: 1rem;
+        }
+    }
+    .gpt3__header-content{
+        margin-right: 0;
+        flex: 0.8;
+    }
+    .gpt3__header-content__people{
+        flex-direction: column;
+        align-items: center;       
+        p{
+            line-height: 18px;
+        }
+    }
+    .gpt3__header-content__input{
+        margin: 1rem 0 1rem;
+        button{
+            min-height: 20px;
+            font-size: 14px;
+            line-height: 10px;
+        }
+        input{
+            min-height: 20px;
+            font-size: 14px;
+        }
+    }
+}
+@media screen and(max-width: 820px){
+    .gpt3__header{
+        flex-direction: column;
+        p{
+            text-align: center;
+        }
+        h1{
+            text-align: center;
+        }
+    }
+    .gpt3__header-content__people{
+        margin: 0 auto;
     }
 }
