--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@ a {
     padding: 4rem 6rem;
 }
 .section__margin{
-    padding: 4rem 6rem;
+    margin: 4rem 6rem;
 }
 .scale-up-center {
 	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -59,7 +59,7 @@ a {
         padding: 4rem;
     }
     .section__margin{
-        padding: 4rem;
+        margin: 4rem;
     }
 
   }
@@ -68,7 +68,7 @@ a {
         padding: 4rem 2rem;
     }
     .section__margin{
-        padding: 4rem 2rem;
+        margin: 4rem 2rem;
     }
 
   }
