--- a/src/containers/whatGPT3/whatGPT3.scss
+++ b/src/containers/whatGPT3/whatGPT3.scss
@@ -1,19 +1,81 @@
 .gpt3__wgpt3{
-    background: rgb(28,101,143);
-    background: linear-gradient(324deg, rgba(28,101,143,1) 0%, rgba(32,27,48,1) 25%, rgba(30,40,83,1) 80%, rgba(26,162,190,1) 100%);
+    background:-moz-linear-gradient(120deg, rgba(15, 66, 121, 1) 0%, rgba(4, 44, 84, 1) 24%, rgba(4, 44, 84, 1) 51%, rgba(4, 44, 84, 1) 83%, rgba(14, 98, 190, 1) 100%); 
+    background:-webkit-linear-gradient(120deg, rgba(15, 66, 121, 1) 0%, rgba(4, 44, 84, 1) 24%, rgba(4, 44, 84, 1) 51%, rgba(4, 44, 84, 1) 83%, rgba(14, 98, 190, 1) 100%);
+    background:-o-linear-gradient(120deg, rgba(15, 66, 121, 1) 0%, rgba(4, 44, 84, 1) 24%, rgba(4, 44, 84, 1) 51%, rgba(4, 44, 84, 1) 83%, rgba(14, 98, 190, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0E62BE', endColorstr='#0F4279', GradientType=0 );
+    background:-ms-linear-gradient(120deg, rgba(15, 66, 121, 1) 0%, rgba(4, 44, 84, 1) 24%, rgba(4, 44, 84, 1) 51%, rgba(4, 44, 84, 1) 83%, rgba(14, 98, 190, 1) 100%);
+    background:linear-gradient(120deg, rgba(15, 66, 121, 1) 0%, rgba(4, 44, 84, 1) 24%, rgba(4, 44, 84, 1) 51%, rgba(4, 44, 84, 1) 83%, rgba(14, 98, 190, 1) 100%);
     display: flex;
     flex-direction: column;
     padding: 3rem 3rem;
 }
 .gpt3__wgpt3-heading{
     display: flex;
+    margin-bottom: 3rem;
     h1{
         flex: 2;
+        max-width: 500px;
+        font-family: var(--font-family);        
+        font-weight: 800;
+        font-size: 34px;
+        line-height: 45px;  
     }
     p{
         flex: 1;
+        font-family: var(--font-family);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 30px;
+        color: var(--color-subtext);
+        text-align: end;
+        margin: auto;
     }
 }
-.gpt3__wgpt3-container{
+.gpt3__wgpt3-container {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
+    margin-top: 2rem;
+}
+.gpt3__wgpt3-feature {
+    display: flex;
+    margin-bottom: 3rem;
+    .gpt3__features__feature_text{
+        max-width: 1300px;
+    }
+    
+}
+.gpt3__wgpt3-container .gpt3__features-container__feature {
+    flex: 1;
+    margin: 1rem;
+    min-width: 210px;
+    display: unset;
+    flex-direction: column;
+}
+.gpt3__wgpt3-container .gpt3__features-container_feature-text {
+    margin-top: 0.5rem;
+}
+@media screen and (max-width: 850px) {
+    .gpt3__wgpt3-heading {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 0rem;
+    }
+
+    .gpt3__wgpt3-heading p {
+        margin-top: 1rem;
+    }
+    .gpt3__features-container__feature{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 650px){
+    .gpt3__whatgpt3-heading{
+        h1{
+            font-size: 28px;
+            line-height: 40px;
+
+        }
+    }
 }
