--- a/src/components/feature/Feature.scss
+++ b/src/components/feature/Feature.scss
@@ -44,3 +44,11 @@
         flex-direction: column;
     }
 }
+.blur-02{
+    position: absolute;
+    width: 900px;
+    height: 300px;
+    background: #321bb2;
+    filter: blur(290px);
+    right: 95%;
+}   
