--- a/src/containers/whatGPT3/whatGPT3.scss
+++ b/src/containers/whatGPT3/whatGPT3.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     padding: 3rem 3rem;
+    margin-bottom: 18rem;
 }
 .gpt3__wgpt3-heading{
     display: flex;
