--- a/src/containers/whatGPT3/whatGPT3.scss
+++ b/src/containers/whatGPT3/whatGPT3.scss
@@ -72,11 +72,11 @@
     }
 }
 @media screen and (max-width: 650px){
-    .gpt3__whatgpt3-heading{
+    .gpt3__wgpt3-heading{
         h1{
             font-size: 28px;
             line-height: 40px;
-
+            text-align: center;
         }
     }
 }
