--- a/src/components/cta/Cta.scss
+++ b/src/components/cta/Cta.scss
@@ -6,6 +6,7 @@
     background: var(--gradient-bar);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10.7236px;
+    flex-direction: row;
 
 }
 .gpt3__cta-content{
@@ -39,4 +40,18 @@
         font-size: 18px;
         line-height: 30px;
     }
+}
+@media screen and (max-width: 768px) {
+    .gpt3__cta{
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .gpt3__cta-btn
+    {
+        margin: 0 auto;
+    }
+    .gpt3__cta-content{
+        text-align: center;
+    }
+
 }
