--- a/src/containers/blog/Blog.scss
+++ b/src/containers/blog/Blog.scss
@@ -43,3 +43,16 @@
         }
     }
 }
+@media screen and (max-width: 850px)
+{
+    .gpt3__blog-heading{
+    h1{
+        font-size: 42px;
+    }
+    }
+    .gpt3__blog-content__groupB{
+        display: flex;
+        flex-direction: column; 
+    }    
+
+}
