--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -12,6 +12,11 @@
         text-transform: uppercase;
         margin: 0 1rem;
         cursor: pointer;
+        :hover{
+            transform: scale(1.3);
+            color: #FF4820;
+            transition: 200ms;
+        }
     }
     button{ 
         font-family: var(--font-family);
@@ -78,6 +83,7 @@
     
     p{
         margin: 1rem 0;
+        
     }
 }
 
