--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,20 @@
     margin: 0;
     scroll-behavior: smooth;
 }
+html{
+  position: absolute;
+
+}
 body {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     background: var(--color-bg);
+    overflow-y: scroll;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+
 }
 a {
     color: unset;
