--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 :root {
   --font-family: 'Manrope', sans-serif;
-
+ 
   --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
   --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
   
@@ -11,4 +11,7 @@
   --color-blog: #042c54;
   --color-text: #81AFDD;
   --color-subtext: #FF8A71;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
